@@ -19,6 +19,10 @@ shower did not trigger the detector, this shower is not added to the output hdf5
 secondary interactions. With this bug, the initial interaction needs to be idenfified with np.abs(flavor) == 14 or 16.  
 This bug does not effect any effective volume calculation. 
 
+new features:
+- add hvsp1, update idl1 model for emitter simulation (from KU lab measurements) and remove
+hvsp2(no longer in use for experiment)
+
 version 2.1.5
 new features:
 
